--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "@testing-library/user-event": "^7.2.1",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
+    "react-animated-css": "^1.2.1",
+    "react-awesome-reveal": "^3.0.0",
     "react-dom": "^16.13.1",
+    "react-icons": "^3.11.0",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
